feat: update executable names in desktop and service files to match application name

--- a/src/meson.build
+++ b/src/meson.build
@@ -19,7 +19,7 @@ conf.set('pkgdatadir', pkgdatadir)
 
 configure_file(
   input: 'composer.in',
-  output: 'composer',
+  output: 'id.ngoding.Composer',
   configuration: conf,
   install: true,
   install_dir: get_option('bindir'),
