--- a/data/id.ngoding.Composer.service.in
+++ b/data/id.ngoding.Composer.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=id.ngoding.Composer
-Exec=@bindir@/composer --gapplication-service
+Exec=@bindir@/id.ngoding.Composer --gapplication-service
