feat(desktop): add comment to desktop entry for Composer application

--- a/data/id.ngoding.Composer.desktop.in
+++ b/data/id.ngoding.Composer.desktop.in
@@ -8,3 +8,4 @@ Categories=Utility;Audio;Music;
 Keywords=Composer,Lyrics;
 StartupNotify=true
 DBusActivatable=true
+Comment=Download lyrics files for your music collection
