feat(romanization): add romanization feature for Chinese, Japanese, and Korean lyrics
- implement romanization service for converting non-Latin scripts to Latin characters
- add settings for enabling/disabling romanization and language-specific options
- update lyrics service to support romanization in LRC format
- enhance preferences dialog with romanization settings

--- a/src/meson.build
+++ b/src/meson.build
@@ -54,6 +54,7 @@ services_sources = [
   'services/settings_service.py',
   'services/file_service.py',
   'services/logger_service.py',
+  'services/romanization_service.py',
 ]
 
 install_data(services_sources, install_dir: moduledir / 'services')
